Changed url to https.

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 	<meta property="og:site_name" content="BLACK WIDOW | Web applications development">
 	<meta property="og:title" content="BLACK WIDOW | Web applications development">
 	<meta property="og:description" content="We do what we enjoy!">
-	<meta property="og:url" content="http://blackwidow.pl/">
+	<meta property="og:url" content="https://blackwidow.pl/">
 	<meta property="og:type" content="website">
 </head>
 <body>
